Adapts for jdk8. Removed deprecated embedding api. Use Hutool for http requests instead of java native in later jdk